--- a/themes/bootstrap/views/layouts/main.haml
+++ b/themes/bootstrap/views/layouts/main.haml
@@ -1,18 +1,18 @@
 !!! 5
 %html{:lang => 'en'}
   %head
-    %meta(http-equiv="Content-Type" content="text/html; charset=utf-8")
-    %meta(name="language" content="en")
-
-    %link(rel="stylesheet" type="text/css" href="#{Yii::app()->request->baseUrl}/css/bootstrap-styles.css" media="screen, projection")
+    %meta(http-equiv="Content-Type" content="text/html; charset=utf-8")/
+    %meta(name="language" content="en")/
+    %title= $this->pageTitle
+    %link{:href => "/favicon.ico", :rel => "shortcut icon"}/
+    %link(rel="stylesheet" type="text/css" href="#{Yii::app()->request->baseUrl}/css/bootstrap-styles.css" media="screen, projection")/
     / blueprint CSS framework
       %link(rel="stylesheet" type="text/css" href="#{Yii::app()->request->baseUrl}/css/screen.css" media="screen, projection")
       %link(rel="stylesheet" type="text/css" href=" #{Yii::app()->request->baseUrl}/css/print.css" media="print")
     / [if lt IE 8]
       %link(rel="stylesheet" type="text/css" href="#{Yii::app()->request->baseUrl}/css/ie.css" media="screen, projection")
-    %link(rel="stylesheet" type="text/css" href=" #{Yii::app()->request->baseUrl}/css/main.css")
-    %link(rel="stylesheet" type="text/css" href=" #{Yii::app()->request->baseUrl}/css/form.css")
-    %title= $this->pageTitle
+    %link(rel="stylesheet" type="text/css" href=" #{Yii::app()->request->baseUrl}/css/main.css")/
+    %link(rel="stylesheet" type="text/css" href=" #{Yii::app()->request->baseUrl}/css/form.css")/
   %body
     #page(class="container")
       #header
