--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,1 +1,156 @@
 @import "base";
+@include sticky-footer(70px, ".layout", ".layout-footer", ".footer");
+
+body{
+  overflow-y: scroll;
+  background:{
+    image: image-url("body_bg.png");
+    position: top center;
+    repeat: no-repeat;
+  }
+  @media (max-width: 767px){
+    padding: 0;
+    overflow-y: hidden;
+  }
+}
+.header{
+  margin-bottom: 10px;
+  .top-header{
+    height: 90px;
+    padding-top: 18px;
+    .top-contact{
+      .tel{
+        margin-top: 5px;
+        color: #393185;
+        line-height: 40px;
+        font:{
+          family: Impact,sans-serif;
+          size: 36px;
+          weight: normal;
+        }
+      }
+      .mail{
+        &:before{
+          content: "e-mail: ";
+          font-style: italic;
+          color: #999;
+        }
+      }
+    }
+  }
+  .navbar-form{
+    .input-append,
+    .input-prepend{
+      margin-top: 8px;
+    }
+  }
+}
+.main {
+  margin-bottom: 40px;
+  .h1,
+  .main-content{
+    padding-left: 25px;
+    .contact{
+      margin-top: 20px;
+    }
+    .text-item{
+      margin: 0 0 20px;
+      text-align: justify;
+      .image-text-item {
+        padding: {
+          left: 20px;
+          bottom: 20px;
+        }
+      }
+    }
+  }
+  .breadcrumb{
+    background-color: transparent;
+    margin-bottom: 10px;
+  }
+  .left-bar{
+    .nav{
+      >li{
+        >a{
+          background-color: transparent;
+          &:hover{
+            color: #022e65;
+          }
+        }
+      }
+      .disabled{
+        >a{
+          &:hover{
+            color: #999;
+          }
+        }
+      }
+    }
+    .nav-header{
+      color: inherit;
+      font-size: 12px;
+      font-weight: bold;
+      text-transform: uppercase;
+      border-bottom: 1px dotted #524E4E;
+      margin-bottom: 10px;
+    }
+  }
+  .contact-form{
+    .required{
+      &:after{
+        content: "*";
+        color: red;
+        margin-left: 5px;
+      }
+    }
+    .error {
+      display: none;
+      margin-top: 3px;
+      margin-bottom: 5px;
+      font-size: 11px;
+      border: 1px solid #FF4F4F;
+      color: #D6000E;
+      background: #FFF2F2;
+      padding: 5px;
+      text-align: center;
+    }
+    .success {
+      display: none;
+      margin-top: 3px;
+      margin-bottom: 5px;
+      border: 1px solid #00CC00;
+      color: #4F8A10;
+      background: #F2FFF2;
+      font-size: 11px;
+      padding: 5px;
+      text-align: center;
+    }
+    .warning {
+      display: none;
+      margin-top: 3px;
+      font-size: 11px;
+      color: #9F6000;
+      background: #FFF9D5;
+      border: 1px solid #FFD324;
+      padding: 5px;
+      text-align: center;
+    }
+    .captcha{
+      >img{
+        vertical-align:baseline;
+        margin-left: 20px;
+      }
+    }
+  }
+}
+.footer{
+  position: relative;
+  background-color: #EBECEC;
+  color: #868383;
+  font-size: 12px;
+  /* margin: 40px 0 0; */
+  @include box-shadow (rgba(0, 0, 0, 0.3) 0 6px 8px -4px inset);
+  .container{
+    padding-top: 30px;
+  }
+}
