--- a/protected/extensions/yiistrap/assets/less/variables.less
+++ b/protected/extensions/yiistrap/assets/less/variables.less
@@ -207,7 +207,7 @@
 @navbarInverseLinkBackgroundHover:       transparent;
 @navbarInverseLinkBackgroundActive:      @navbarInverseBackground;
 
-@navbarInverseSearchBackground:          $grayLight; //lighten(@navbarInverseBackground, 25%);
+@navbarInverseSearchBackground:          @grayLight; //lighten(@navbarInverseBackground, 25%);
 @navbarInverseSearchBackgroundFocus:     @white;
 @navbarInverseSearchBorder:              @navbarInverseBackground;
 @navbarInverseSearchPlaceholderColor:    #ccc;
