--- a/protected/extensions/yiistrap/assets/css/bootstrap.css
+++ b/protected/extensions/yiistrap/assets/css/bootstrap.css
@@ -4116,7 +4116,7 @@ input[type="submit"].btn.btn-mini {
 }
 .navbar-inverse .navbar-search .search-query {
   color: #ffffff;
-  background-color: $grayLight;
+  background-color: #999999;
   border-color: #352e7c;
   -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15);
   -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15);
