--- a/themes/bootstrap/views/layouts/home.haml
+++ b/themes/bootstrap/views/layouts/home.haml
@@ -5,7 +5,7 @@
     %meta(name="language" content="pl")/
     %title= $this->pageTitle
     %link{:href => "/favicon.ico", :rel => "shortcut icon"}/
-    = Yii::app()->bootstrap->registerCoreCss()
+    = Yii::app()->bootstrap->register()
     %link(rel="stylesheet" type="text/css" href=" #{Yii::app()->request->baseUrl}/css/home.css")/
     /
       %link(rel="stylesheet" type="text/css" href=" #{Yii::app()->request->baseUrl}/css/form.css")/
@@ -15,6 +15,7 @@
         .navbar.navbar-inverse.navbar-fixed-top(role="navigation")
           .navbar-inner
             .container
+              = CHtml::link('Dendor Valve', '/', array('class'=>'brand span2'))
               .nav-collapse.collapse
                 :php
                   $this->widget('zii.widgets.CMenu',array(
@@ -34,10 +35,10 @@
                   %li= CHtml::link(CHtml::image('img/icons/pl.gif','Poland', array('width'=>'16', 'height'=>'11')),'http://dendor.pl', array('title'=>'Poland'))
                   %li= CHtml::link(CHtml::image('img/icons/ru.gif','Русский', array('width'=>'16', 'height'=>'11')),'http://dendor.ru', array('title'=>'Русский'))
         / navbar
-        .container.head
-          .row
+        .container
+          .row.head
             .span3
-              .logo= CHtml::image('img/logo/logo-blue270.png',CHtml::encode(Yii::app()->name), array('width'=>'269', 'height'=>'82'))
+              .logo= CHtml::image('img/logo/logo-wite270.png',CHtml::encode(Yii::app()->name), array('width'=>'269', 'height'=>'82'))
               .contact-top.text-center(role="contentinfo")
                 .address
                   ul. Romualda Traugutta 29,
