create widget slide

--- a/themes/bootstrap/views/layouts/home.haml
+++ b/themes/bootstrap/views/layouts/home.haml
@@ -52,6 +52,8 @@
               .wrap-slider
                 %h1.pull-left Armatura przemysłowa
                 .pull-right.img-slider= CHtml::image('/img/slide1.png','Armatura przemysłowa', array('width'=>'245', 'height'=>'395'))
+                .slider#slider
+                  = $this->widget('application.components.SliderHome')
         / head
       / header
       %main.main
