create ext Slidr widget

--- a/themes/bootstrap/views/layouts/home.haml
+++ b/themes/bootstrap/views/layouts/home.haml
@@ -53,7 +53,7 @@
                 %h1.pull-left Armatura przemysłowa
                 .pull-right.img-slider= CHtml::image('/img/slide1.png','Armatura przemysłowa', array('width'=>'245', 'height'=>'395'))
                 .slider#slider
-                  = $this->widget('application.components.SliderHome',array(), true)
+                  = $this->widget('ext.slidr.SliderHome',array(), true)
         / head
       / header
       %main.main
