--- a/themes/bootstrap/views/layouts/main.haml
+++ b/themes/bootstrap/views/layouts/main.haml
@@ -33,10 +33,10 @@
                 :php
                   $this->widget('zii.widgets.CMenu',array(
                     'items'=>array(
-                      array('label'=>'Home', 'url'=>array('/site/index')),
-                      array('label'=>'About', 'url'=>array('/site/page', 'view'=>'about')),
-                      array('label'=>'Contact', 'url'=>array('/site/contact')),
-                      array('label'=>'Logout ('.Yii::app()->user->name.')', 'url'=>array('/site/logout'), 'visible'=>!Yii::app()->user->isGuest)
+                      array('label'=>Yii::t('app', 'HOME'), 'url'=>array('/site/index')),
+                      array('label'=>Yii::t('app', 'ABOUT'), 'url'=>array('/site/page', 'view'=>'about')),
+                      array('label'=>Yii::t('app', 'CONTACT'), 'url'=>array('/site/contact')),
+                      array('label'=>Yii::t('app', 'LOGOUT').' ('.Yii::app()->user->name.')', 'url'=>array('/site/logout'), 'visible'=>!Yii::app()->user->isGuest)
                     ),
                     'activeCssClass'=>'active',
                     'htmlOptions'=>array(
