--- a/themes/bootstrap/views/site/pages/about.haml
+++ b/themes/bootstrap/views/site/pages/about.haml
@@ -1,9 +1,9 @@
 :php
-  $this->pageTitle=Yii::app()->name . ' - About';
+  $this->pageTitle=Yii::app()->name . ' - ' . Yii::t('app', 'ABOUT');
   $this->breadcrumbs=array(
-    'About',
+    Yii::t('app', 'ABOUT'),
   );
-%h1 About
+%h1=Yii::t('app', 'ABOUT')
 %p "Это статическая страница". You may change the content of this page by updating the file
   %code= __FILE__
 
