--- a/themes/bootstrap/views/site/index.haml
+++ b/themes/bootstrap/views/site/index.haml
@@ -9,3 +9,7 @@
   %li Layout file:
     %code= $this->getLayoutFile('main')
 %p!= For more details on how to further develop this application, please read the <a href="http://www.yiiframework.com/doc/">documentation</a>. Feel free to ask in the <a href="http://www.yiiframework.com/forum/">forum</a>, should you have any questions.
+%p= Yii::app()->language
+%p= Yii::app()->getRequest()->getPreferredLanguage()
+
+-$this->widget('ext.langPick.ELangPick', array())
