--- a/themes/bootstrap/views/site/index.haml
+++ b/themes/bootstrap/views/site/index.haml
@@ -11,5 +11,7 @@
 %p!= For more details on how to further develop this application, please read the <a href="http://www.yiiframework.com/doc/">documentation</a>. Feel free to ask in the <a href="http://www.yiiframework.com/forum/">forum</a>, should you have any questions.
 %p= Yii::app()->language
 %p= Yii::app()->getRequest()->getPreferredLanguage()
+:php
+  var_dump(Yii::app()->getRequest()->getPreferredLanguages());
 
--$this->widget('ext.langPick.ELangPick', array())
+-$this->widget('ext.langPick.ELangPick', array('excludeFromList' => array('en_us'),))
