--- a/themes/bootstrap/views/site/index.haml
+++ b/themes/bootstrap/views/site/index.haml
@@ -11,7 +11,11 @@
 %p!= For more details on how to further develop this application, please read the <a href="http://www.yiiframework.com/doc/">documentation</a>. Feel free to ask in the <a href="http://www.yiiframework.com/forum/">forum</a>, should you have any questions.
 %p= Yii::app()->language
 %p= Yii::app()->getRequest()->getPreferredLanguage()
+%p= Yii::app()->getLanguage()
 :php
-  var_dump(Yii::app()->getRequest()->getPreferredLanguages());
+  $aLocale = explode('_',Yii::app()->getRequest()->getPreferredLanguage());
+  $prefLang = $aLocale[0];
+  var_dump(Yii::app()->getLocale()->id);
+
 
 -$this->widget('ext.langPick.ELangPick', array('excludeFromList' => array('en_us'),))
