--- a/themes/bootstrap/views/site/index.haml
+++ b/themes/bootstrap/views/site/index.haml
@@ -15,7 +15,7 @@
 :php
   $object = new LangChange();
   var_dump($object->getMessageLangs());
-  $object->setAppLang('pl')
+  $object->setAppLang('pl');
 %p= $object->getDefaultLang()
 %p= $object->getPrefLang()
 %p= $object->getCoockeLang()
