--- a/themes/bootstrap/views/layouts/home.haml
+++ b/themes/bootstrap/views/layouts/home.haml
@@ -2,7 +2,7 @@
 %html(lang = "#{Yii::app()->getLanguage()}")
   %head
     %meta(http-equiv="Content-Type" content="text/html; charset=utf-8")/
-    //%meta(http-equiv="Content-Language" content="#{Yii::app()->getLanguage()}")/
+    %meta(http-equiv="Content-Language" content="#{Yii::app()->getLanguage()}")/
     %title= $this->pageTitle
     %link{:href => "/favicon.ico", :rel => "shortcut icon"}/
     = Yii::app()->bootstrap->register()
