--- a/themes/bootstrap/views/layouts/main.haml
+++ b/themes/bootstrap/views/layouts/main.haml
@@ -1,8 +1,8 @@
 !!! 5
-%html{:lang => 'en'}
+%html(lang = "#{Yii::app()->getLanguage()}")
   %head
     %meta(http-equiv="Content-Type" content="text/html; charset=utf-8")/
-    %meta(name="language" content="en")/
+    %meta(http-equiv="Content-Language" content="#{Yii::app()->getLanguage()}")/
     %title= $this->pageTitle
     %link{:href => "/favicon.ico", :rel => "shortcut icon"}/
     = Yii::app()->bootstrap->registerCoreCss()
