--- a/themes/bootstrap/views/site/index.haml
+++ b/themes/bootstrap/views/site/index.haml
@@ -9,6 +9,7 @@
   %li Layout file:
     %code= $this->getLayoutFile('main')
 %p!= For more details on how to further develop this application, please read the <a href="http://www.yiiframework.com/doc/">documentation</a>. Feel free to ask in the <a href="http://www.yiiframework.com/forum/">forum</a>, should you have any questions.
+
 :php
   $object = new LangChange();
   $object->setAppLang('pl');
@@ -18,4 +19,4 @@
 
 
 
-/-$this->widget('ext.langPick.ELangPick', array('excludeFromList' => array('en_us'),))
+-$this->widget('ext.langPick.ELangPick', array('excludeFromList' => array('en_us'),))
