--- a/themes/bootstrap/views/site/pages/about.haml
+++ b/themes/bootstrap/views/site/pages/about.haml
@@ -7,3 +7,6 @@
 %p "Это статическая страница". You may change the content of this page by updating the file
   %code= __FILE__
 
+-$this->widget('ext.langChange.LanguageChange')
+
+
