--- a/themes/bootstrap/views/layouts/home.haml
+++ b/themes/bootstrap/views/layouts/home.haml
@@ -30,6 +30,8 @@
                         'class'=>'nav',
                     ),
                   ));
+                -$this->widget('ext.langChange.LanguageChange', array('pickerType' => 'flags',))
+              /
                 %ul.nav.pull-right.country
                   %li= CHtml::link(CHtml::image('/img/icons/us.gif','U.S.', array('width'=>'16', 'height'=>'11')),'http://dendor-valve.com', array('title'=>'U.S.'))
                   %li= CHtml::link(CHtml::image('/img/icons/pl.gif','Poland', array('width'=>'16', 'height'=>'11')),'http://dendor.pl', array('title'=>'Poland'))
