--- a/themes/bootstrap/views/site/pages/about.haml
+++ b/themes/bootstrap/views/site/pages/about.haml
@@ -8,4 +8,4 @@
   %code= __FILE__
 
 -$this->widget('ext.langChange.LanguageChange', array('pickerType' => 'flags',))
--$this->widget('ext.langChange.LanguageChange', array('pickerType' => 'dropdown',))
+-$this->widget('ext.langChange.LanguageChange', array('pickerType' => 'dropdown', 'class'=>'input-small flag-language'))
