--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,4 @@
+/* $flag-sprite: sprite-map("flags/*", $position: 100%, $spacing: 5px, $repeat: no-repeat); */
 .h1 { color: #9D9D00; font-size: 24px; font-weight: normal; margin: 0 0 10px; }
 
 .h2 { font-size: 18px; font-weight: normal; line-height: inherit; margin-bottom: 15px; margin-top: 0; text-transform: none; }
@@ -28,21 +29,21 @@ html, body { height: 100%; }
 
 .footer { clear: both; position: relative; height: 70px; }
 
-body { background-image: url('/img/body_bg.png?1391258070'); background-position: top center; background-repeat: no-repeat; }
+body { background-image: url('/img/body_bg.png?1416006965'); background-position: top center; background-repeat: no-repeat; }
 @media (max-width: 767px) { body { padding: 0; } }
 
-.header { height: 450px; background-image: url('/img/body_bg.png?1391258070'); background-position: top center; background-repeat: no-repeat; background-color: #393185; -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; -moz-box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; margin-bottom: 45px; }
+.header { height: 450px; background-image: url('/img/body_bg.png?1416006965'); background-position: top center; background-repeat: no-repeat; background-color: #393185; -webkit-box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; -moz-box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; box-shadow: rgba(0, 0, 0, 0.5) 0 5px 15px; margin-bottom: 45px; }
 .header .navbar .country > li > a { padding: 12.5px 6px 12.5px; }
 .header .head { margin-top: 65px; }
 .header .head .logo { margin: 30px 0; }
 .header .head .contact-top { color: #fff; }
 .header .head .contact-top .tel { /* family: Impact,sans-serif; */ font-size: 24px; font-weight: normal; line-height: 40px; text-shadow: rgba(0, 0, 0, 0.2) 3px 3px 4px; }
 .header .head .contact-top .address { margin: 0 auto 20px; max-width: 220px; }
-.header .head .contact-top .email > a { color: white; }
-.header .head .contact-top .email > a:visited { color: white; }
-.header .head .contact-top .email > a:focus { color: white; }
-.header .head .contact-top .email > a:hover { color: #e6e6e6; }
-.header .head .contact-top .email > a:active { color: white; }
+.header .head .contact-top .email > a { color: #777777; font-weight: bold; font-size: 13px; }
+.header .head .contact-top .email > a:visited { color: #777777; }
+.header .head .contact-top .email > a:focus { color: #777777; }
+.header .head .contact-top .email > a:hover { color: #5e5e5e; }
+.header .head .contact-top .email > a:active { color: #777777; }
 .header .head .contact-top .address, .header .head .contact-top .email { text-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0; }
 .header .wrap-slider { margin: 10px 0; padding: 20px 5px; background-color: rgba(255, 255, 255, 0.3); }
 .header .wrap-slider > h1 { color: #fff; font-family: Impact, sans-serif; font-weight: normal; text-shadow: rgba(0, 0, 0, 0.2) 3px 3px 4px; max-width: 500px; margin-left: 70px; margin-top: 50px; }
